# starterc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  readme.md
.github/: setup.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
doc/: style_guide.md
include/: CMakeLists.txt  mylib.h
src/: mylib.c
test/: CMakeLists.txt
